--- a/.github/workflows/fortify-sast-gha.yml
+++ b/.github/workflows/fortify-sast-gha.yml
@@ -20,6 +20,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin' # See 'Supported distributions' for available options
+          java-version: '17'
+
       - name: Setup Fortify tools
         uses: fortify/github-action/setup@v1.2.2
         with:
@@ -52,7 +57,7 @@ jobs:
           SC_SAST_TOKEN : ${{secrets.FTFY_SAST_CLIENT_TOKEN }}
           # EXTRA_FOD_LOGIN_OPTS: --socket-timeout=60s
           SSC_APPVERSION : "${{ github.event.repository.name }}:${{ github.ref_name }}"
-          EXTRA_PACKAGE_OPTS: -q -oss
+          EXTRA_PACKAGE_OPTS: scancentral package -o package.zip -pyr requirements.txt -yv 3 -oss
           DO_WAIT: true
           # DO_EXPORT: true
 
